# animsvg

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE.md  README.md  fill.diff  graphics.friction.Friction.json  nopaint.diff
src/app/: CMakeLists.txt  app.desktop.in  appdata.xml.in  brushes.qrc  effectsloader.cpp  effectsloader.h  eimporters.cpp  eimporters.h  enve2d.qss  evfileio.cpp  execdelegator.cpp  execdelegator.h  fonts.qrc  friction.iss  friction.qss  friction.rc.in  hardwareinfo.cpp  hardwareinfo.h  hicolor.qrc  iconloader.cpp  iconloader.h  icons.qrc  keypoint.h  main.cpp  memorychecker.cpp  memorychecker.h  memoryhandler.cpp  memoryhandler.h  meta.xml.in  outputsettings.cpp  outputsettings.h  renderhandler.cpp  renderhandler.h  renderinstancesettings.cpp  renderinstancesettings.h  rendersettings.h  resources.qrc  svgo.config.js  tips.qrc  videoencoder.h
src/app/GUI/: aboutwidget.cpp  aboutwidget.h  actionbutton.cpp  actionbutton.h  alignwidget.cpp  alignwidget.h  animationdockwidget.cpp  animationdockwidget.h  animationwidgetscrollbar.cpp  animationwidgetscrollbar.h  assetswidget.cpp  assetswidget.h  audiohandler.cpp  audiohandler.h  buttonbase.cpp  buttonbase.h  buttonslist.cpp  buttonslist.h  canvasbasewrappernode.cpp  canvasbasewrappernode.h  canvaswindow.cpp  canvaswindow.h  canvaswindowevents.cpp  canvaswrappernode.cpp  canvaswrappernode.h  centralwidget.cpp  changewidthwidget.h  customfpsdialog.cpp  customfpsdialog.h  ecombobox.cpp  ecombobox.h  editablecombobox.cpp  editablecombobox.h  effectactions.cpp  ekeyfilter.cpp  ekeyfilter.h  ewidgetsimpl.cpp  ewidgetsimpl.h  extraactions.cpp  fakemenubar.cpp  (+66 more)
src/app/GUI/BoxesList/: boolpropertywidget.cpp  boolpropertywidget.h  boxscrollarea.cpp  boxscrollarea.h  boxscroller.cpp  boxscroller.h  boxscrollwidget.cpp  boxscrollwidget.h  boxsinglewidget.cpp  boxsinglewidget.h  boxtargetwidget.cpp  boxtargetwidget.h
src/app/GUI/BrushWidgets/: bookmarkedbrushes.h  brushselectionwidget.cpp
src/app/GUI/ColorWidgets/: bookmarkedcolors.cpp  bookmarkedcolors.h  colorlabel.cpp  colorlabel.h  colorpickingwidget.cpp  colorpickingwidget.h  colorsettingswidget.cpp  colorsettingswidget.h  colorvaluerect.cpp  colorvaluerect.h  colorwidget.cpp  colorwidget.h  colorwidgetshaders.cpp  glwidget.cpp  glwidget.h  h_wheel_sv_triangle.cpp  h_wheel_sv_triangle.h  paintcolorwidget.cpp  paintcolorwidget.h  savedcolorbutton.h  savedcolorswidget.cpp  savedcolorswidget.h
src/app/GUI/Dialogs/: animationtopaintdialog.cpp  animationtopaintdialog.h  applyexpressiondialog.cpp  applyexpressiondialog.h  dialogsinterfaceimpl.cpp  dialogsinterfaceimpl.h  durationrectsettingsdialog.cpp  durationrectsettingsdialog.h  exportsvgdialog.cpp  exportsvgdialog.h  scenesettingsdialog.cpp  scenesettingsdialog.h
src/app/GUI/Expressions/: expressiondialog.cpp  expressiondialog.h  expressioneditor.cpp  expressioneditor.h  expressionhighlighter.cpp  expressionhighlighter.h
src/app/GUI/GradientWidgets/: currentgradientwidget.cpp  currentgradientwidget.h  displayedgradientswidget.cpp  displayedgradientswidget.h  gradientslistwidget.cpp  gradientslistwidget.h  gradientwidget.cpp  gradientwidget.h
src/app/GUI/RenderWidgets/: closablecontainer.cpp  closablecontainer.h  outputsettingsdialog.cpp  outputsettingsdialog.h  outputsettingsdisplaywidget.cpp  outputsettingsdisplaywidget.h  outputsettingsprofilesdialog.cpp  outputsettingsprofilesdialog.h  renderinstancewidget.cpp  renderinstancewidget.h  rendersettingsdialog.cpp  rendersettingsdialog.h  rendersettingsdisplaywidget.cpp  renderwidget.cpp  renderwidget.h
src/app/GUI/Settings/: canvassettingswidget.cpp  canvassettingswidget.h  generalsettingswidget.cpp  generalsettingswidget.h  interfacesettingswidget.cpp  interfacesettingswidget.h  labeledslider.cpp  labeledslider.h  performancesettingswidget.cpp  performancesettingswidget.h  pluginssettingswidget.cpp  pluginssettingswidget.h  presetsettingswidget.cpp  presetsettingswidget.h  settingsdialog.cpp  settingsdialog.h  (+4 more)
src/app/xdg/: friction.desktop  friction.xml
src/engine/: CMakeLists.txt
src/ui/: CMakeLists.txt  ui_global.h
src/ui/dialogs/: adjustscenedialog.cpp  adjustscenedialog.h  applyexpressiondialog.cpp  applyexpressiondialog.h  commandpalette.cpp  commandpalette.h  dialog.cpp  dialog.h  durationrectsettingsdialog.cpp  durationrectsettingsdialog.h  exportsvgdialog.cpp  exportsvgdialog.h  markereditordialog.cpp  markereditordialog.h  qrealpointvaluedialog.cpp  qrealpointvaluedialog.h  renderoutputwidget.cpp  renderoutputwidget.h  scenesettingsdialog.cpp  scenesettingsdialog.h
src/ui/gradientwidgets/: currentgradientwidget.cpp  currentgradientwidget.h  displayedgradientswidget.cpp  displayedgradientswidget.h  gradientslistwidget.cpp  gradientslistwidget.h  gradientwidget.cpp  gradientwidget.h
src/ui/misc/: infinitemousemovement.cpp  infinitemousemovement.h  keyfocustarget.cpp  keyfocustarget.h  noshortcutaction.cpp  noshortcutaction.h
src/ui/optimalscrollarena/: minimalscrollwidget.cpp  minimalscrollwidget.h  scrollarea.cpp  scrollarea.h  scrollvisiblepartbase.cpp  scrollvisiblepartbase.h  scrollwidget.cpp  scrollwidget.h  scrollwidgetvisiblepart.cpp  scrollwidgetvisiblepart.h  singlewidget.cpp  singlewidget.h
src/ui/updater/: updatechecker.cpp  updatechecker.h
src/ui/widgets/: aboutwidget.cpp  aboutwidget.h  actionbutton.cpp  actionbutton.h  alignwidget.cpp  alignwidget.h  animationwidgetscrollbar.h  assetswidget.cpp  assetswidget.h  bookmarkedcolors.cpp  bookmarkedcolors.h  bookmarkedwidget.cpp  bookmarkedwidget.h  boolpropertywidget.cpp  boolpropertywidget.h  boxscrollarea.cpp  boxscrollarea.h  buttonbase.cpp  buttonbase.h  buttonslist.cpp  buttonslist.h  canvassettingswidget.cpp  canvassettingswidget.h  canvastoolbar.cpp  canvastoolbar.h  changewidthwidget.cpp  changewidthwidget.h  colorlabel.cpp  colorlabel.h  colorpickingwidget.cpp  colorpickingwidget.h  colorsettingswidget.cpp  colorsettingswidget.h  colortoolbar.cpp  colortoolbar.h  colortoolbutton.cpp  colortoolbutton.h  colorvaluerect.cpp  colorvaluerect.h  colorwidget.cpp  (+61 more)
(+851 files in other folders)
